messchart/templates/reactjs/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs
  labels:
    app: reactjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactjs
  template:
    metadata:
      labels:
        app: reactjs
    spec:
      containers:
        - name: reactjs-container
          image: { { .Values.reactjs_image } }
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: reactjs
  labels:
    app: reactjs
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
      protocol: TCP
  selector:
    app: reactjs
